# note_hardware

./: D1 Mini(ESP8266)inLinux.md  D1Mini(ESP8266)inLinux -install.md  README.md
CZN-15E/sketch_nov09a/: sketch_nov09a.ino
Example/CZN-15E/: README.md
Example/Database/esp8266-firebase/: README.md
Example/Other/webCtr/: README.md
Example/esp8266-firebase/sketch_20210716a/: sketch_20210716a.ino
Example/hc-sr505/: README.md
Project/: README.md
Project/Server_conf/mysql/: esp8266_data.sql
Project/Server_conf/nginx/: nginx.conf  nginx.md
Project/Server_conf/php/: php.ini
Project/doc/: README.md  doc1.md  doc2.md
Project/esp8266-code/post_1/: post_1.ino
Project/esp8266-code/update_uv/: update_uv.ino
Project/test_website_file/: connect.php
S12SD/: README.md
S12SD/sketch_sep10a/: sketch_sep10a.ino
arduino/Example/: README.md
at32_F423/AT-START-F423/: README.md
at32_F423/AT32F423VCT7_LED/: .autotools  .cproject  .project  AT32F423VCT7_LED.ATWP
dht11/sketch_mar05b/: sketch_mar05b.ino
dhtxx/: README.md
esp8266-firebase/sketch_feb28a/: sketch_feb28a.ino
esp8266_mysql/: dbwrite.php
esp8266_mysql/php/: update.php
esp8266_mysql/server_php/: dbread.php
esp8266_mysql/原/: dbread2.php  dbwrite2.php
hello_world/: hello_world.ino
motor_mg996r/: README.md
motor_mg996r/sketch_jul25a/: sketch_jul25a.ino
motor_sg90/: README.md
motor_sg90/sketch_jul24a/: sketch_jul24a.ino
stm32/f103c8t6_p1/: Cargo.toml  Embed.toml  flash.sh  gdb_debug.sh  memory.x  openocd.cfg
stm32/f103c8t6_p1/.cargo/: config.toml
stm32/f103c8t6_p1/src/: main.rs
(+88 files in other folders)
